--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,6 +9,10 @@ tasks:
       sudo ./aws/install
       cd $THEIA_WORKSPACE_ROOT
       - name: postgres
+  - name: react-js
+    command: |
+      cd frontend-react-js
+      npm i
   - name: postgres
     init: |
       curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc|sudo gpg --dearmor -o /etc/apt/trusted.gpg.d/postgresql.gpg
@@ -18,3 +22,4 @@ tasks:
 vscode:
   extensions:
     - 42Crunch.vscode-openapi
+    - mtxr.sqltools-driver-pg
